# yte

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/pyqt_tutorial/: main.py  test.py
src/yte/: constants.py  custom_webengine.py  global_helper.py  main.py  windows.py
