[project]
name = "yte"
version = "0.1.0"
description = "A browser specifically made for YouTube"
authors = [
    {name = "rfdzan", email = "hekodev.py@gmail.com"},
]
dependencies = [
    "pyqt6>=6.7.0",
    "PyQt6-WebEngine>=6.7.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
main = "python src/yte/main.py"
mypy = "mypy ."

[tool.pdm.dev-dependencies]
static_check = [
    "mypy>=1.10.0",
]
test = [
    "pytest>=8.2.2",
]
format = [
    "black>=24.4.2",
]
