[project]
name = "yte"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "rfdzan", email = "hekodev.py@gmail.com"},
]
dependencies = [
    "pyside6>=6.7.1",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
main = "python src/yte/main.py"
mypy = "mypy ."

[tool.pdm.dev-dependencies]
format = [
    "black>=24.4.2",
]
test = [
    "pytest>=8.2.2",
]
mypy = [
    "mypy>=1.10.0",
]
